--- a/Jobchasers/public/style.css
+++ b/Jobchasers/public/style.css
@@ -9,26 +9,40 @@ body {
 img {
   width: 100%;
 }
+header {
+  height: 50px;
+  background: rgb(33, 199, 241);
+  margin: 0 0 50px 0;
+  border-radius: 2px;
+  box-shadow: 2px 2px 2px rgb(33, 199, 241);
+}
+.search-box {
+  width: 70%;
+  height: 50px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 2px rgb(106, 104, 104);
+}
 .job-card {
   display: flex;
   gap: 10px;
   border: 2px solid rgb(240, 235, 235);
   border-radius: 10px;
-  width: 600px;
+  width: 70%;
   padding: 0 10px 0 10px;
   margin: 50px auto;
 }
 .company {
   display: flex;
+  flex: 1 120px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 .job-details {
   display: flex;
+  flex: 5 120px;
   flex-direction: column;
   gap: 10px;
-  border-left: 1px solid black;
   padding: 0.25rem;
   width: 450px;
   text-align: left;
