--- a/Jobchasers/public/style.css
+++ b/Jobchasers/public/style.css
@@ -11,16 +11,23 @@ img {
 }
 header {
   height: 50px;
-  background: rgb(33, 199, 241);
+  background: #00c2ff;
   margin: 0 0 50px 0;
   border-radius: 2px;
-  box-shadow: 2px 2px 2px rgb(33, 199, 241);
+  box-shadow: 2px 2px 2px #00c2ff;
 }
 .search-box {
+  display: flex;
   width: 70%;
   height: 50px;
+  margin: 0 auto;
   border-radius: 10px;
   box-shadow: 2px 2px 2px rgb(106, 104, 104);
+}
+.tags {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
 }
 .job-card {
   display: flex;
