--- a/Jobchasers/public/style.css
+++ b/Jobchasers/public/style.css
@@ -1,3 +1,7 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+
+
 * {
   margin: 0;
   padding: 0;
@@ -14,6 +18,7 @@ img {
   width: 100%;
 }
 header {
+    
   display: flex;
   justify-content: center;
   align-items: center;
@@ -58,6 +63,8 @@ header {
   margin: 50px auto;
 }
 .company {
+    font-family: 'Lato', sans-serif;
+
   display: flex;
   flex: 1 120px;
   flex-direction: column;
@@ -65,6 +72,8 @@ header {
   align-items: center;
 }
 .job-details {
+    font-family: 'Lato', sans-serif;
+
   display: flex;
   flex: 5 120px;
   flex-direction: column;
@@ -73,6 +82,12 @@ header {
   width: 450px;
   text-align: left;
 }
+
+.description {
+    font-family: 'Lato', sans-serif;
+
+}
+
 .title {
   color: #160691;
 }
